# Windsor-Widget-2.0

./: Start-WindsorWidget.bat  Start-WindsorWidget.ps1  Windsor_Widget_2_Source_to_Field_Inventory.md
Source/: .gitignore  .windsor_customer_edit_excel_v1  .windsor_customer_groups_price_files_v1  .windsor_customer_last_price_v1  .windsor_customer_summary_v1  .windsor_freight_inference_v1  .windsor_item_policy_tags_v1  .windsor_item_sales_insights_v1  .windsor_item_summary_v1  .windsor_register_visibility_bulk_policy_v1  .windsor_supplier_bill_defaults_v1  .windsor_supplier_summary_v1  .windsor_transaction_subset_v1  .windsor_web_foundation_v1  README.md  pyproject.toml
Source/config/: development.example.json  myob_sources.example.json
Source/docs/: BRING_IN_PURCHASE_SOURCE.md  DEVELOPMENT_DATABASE.md  INVENTORY_PLANNING_WORKFLOW.md  MASTER_IMPORT_WORKFLOW.md  MYOB_STAGING_RUNBOOK.md  REPORTING_READ_MODELS.md  SOURCE_CONTRACTS.md  SOURCE_MATCH_ASSESSMENT.md  STAGE_1_FOUNDATION.md  TRANSACTION_IMPORT_WORKFLOW.md  WEB_FOUNDATION.md  YUCHANG_PACKING_IMPORT.md
Source/migrations/: env.py
Source/scripts/: assess_source_matches.py  classify_stocked_items_from_history.py  import_customer_groups.py  infer_customer_freight.py  master_import_workflow.ps1  normalize_customer_price_paths.py  planning_workflow.ps1  preview_yuchang_packing_data.py  reporting_service_workflow.ps1  setup_dev_database.ps1  stage_myob_exports.ps1  sync_manufacture_orders_from_myob.py  sync_preferred_suppliers_from_bills.py  sync_yuchang_packing_data.py  transaction_import_workflow.ps1  (+1 more)
(+215 files in other folders)
